update energy issue legend z-index
Former-commit-id: 9249f9c0c82e7acc237ef2444636b0a5fdc25c5f

--- a/issues/energy/assets/custom.scss
+++ b/issues/energy/assets/custom.scss
@@ -154,6 +154,7 @@
       .legend {
         left: 20px;
         bottom: 50px;
+        z-index: 2;
       }
     }
   }
